Added rating routes and tests
